public-node/testnet/public-testnet-ckb-nginx.yaml
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: public-testnet-ckb-nginx
  namespace: public-node
spec:
  replicas: 2
  selector:
    matchLabels:
      app: public-testnet-ckb-nginx
      logging: 'true'
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: public-testnet-ckb-nginx
        logging: 'true'
    spec:
      volumes:
        - name: ckb-testnet-nginx-conf
          configMap:
            name: ckb-testnet-nginx.conf
            defaultMode: 420
      containers:
        - name: public-testnet-ckb-nginx
          image: 'jiangxianliang/ckb-nginx-proxy:1.21.6'
          ports:
            - containerPort: 80
              protocol: TCP
          resources: {}
          volumeMounts:
            - name: ckb-testnet-nginx-conf
              readOnly: true
              mountPath: /etc/nginx/nginx.conf
              subPath: nginx.conf
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          imagePullPolicy: IfNotPresent
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      securityContext: {}
      schedulerName: default-scheduler
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  revisionHistoryLimit: 10
  progressDeadlineSeconds: 600
