public-node/testnet/public-testnet-ckb.yaml
---
kind: StatefulSet
apiVersion: apps/v1
metadata:
  name: public-testnet-ckb
  namespace: public-node
spec:
  replicas: 1
  selector:
    matchLabels:
      app: public-testnet-ckb
      logging: 'true'
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: public-testnet-ckb
        logging: 'true'
    spec:
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: public-testnet-pvc
        - name: ckb-toml
          configMap:
            name: public-testnet-ckb-toml
            defaultMode: 420
      containers:
        - name: public-testnet-ckb
          image: 'nervos/ckb:v0.106.0-rc3'
          command:
            - bash
            - '-c'
            - |
              set -ex
              cd /var/lib/ckb
              #ckb init --chain testnet --force
              ckb init --chain testnet || true
              ckb migrate --force
              ckb run
          ports:
            - name: rpc
              containerPort: 8114
              protocol: TCP
          resources: {}
          volumeMounts:
            - name: data
              mountPath: /var/lib/ckb
              subPath: public-testnet-ckb
            - name: ckb-toml
              mountPath: /var/lib/ckb/ckb.toml
              subPath: ckb.toml
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          imagePullPolicy: IfNotPresent
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      securityContext:
        runAsUser: 0
      schedulerName: default-scheduler
  serviceName: ckb
  podManagementPolicy: OrderedReady
  updateStrategy:
    type: RollingUpdate
    rollingUpdate:
      partition: 0
  revisionHistoryLimit: 10
